making it fully interactive

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,12 @@
 
 <h1>Events</h1>
 
-<div class="calendar"></div>
+<div id="event_calendar"></div>
+
+<div id="remote_container">
+  <div id="new_event"></div>
+  <div id="edit_event"></div>
+</div>
 
 <table>
   <thead>
